@@ -12,25 +12,23 @@
         <Setter Property="Template">
             <ControlTemplate>
                 <Border CornerRadius="3" MinHeight="{TemplateBinding MinHeight}" Margin="5" BorderBrush="Black" BorderThickness="1"  Background="White" MaxHeight="{TemplateBinding MaxHeight}">
-                    <styles:SnackbarHost HostName="dialogError">
-                        <Grid RowDefinitions="10,AUTO,*,2,2,35" Margin="5,0,5,5">
-                            <TextBlock Text="{TemplateBinding Header}" Grid.Row="1" FontWeight="Bold" FontSize="20" TextAlignment="Center" />
-                            <ContentPresenter Content="{TemplateBinding Content}" Margin="3,10,3,0" Grid.Row="2" />
+                    <Grid RowDefinitions="10,AUTO,*,2,2,35" Margin="5,0,5,5">
+                        <TextBlock Text="{TemplateBinding Header}" Grid.Row="1" FontWeight="Bold" FontSize="20" TextAlignment="Center" />
+                        <ContentPresenter Content="{TemplateBinding Content}" Margin="3,10,3,0" Grid.Row="2" />
 
-                            <Rectangle Grid.Row="3" Fill="Gray" VerticalAlignment="Bottom" />
+                        <Rectangle Grid.Row="3" Fill="Gray" VerticalAlignment="Bottom" />
 
-                            <Grid Classes="single" Grid.Row="5" VerticalAlignment="Bottom">
-                                <Button HorizontalAlignment="Stretch" Height="40" Classes="base Flat" VerticalContentAlignment="Bottom" IsDefault="True" Command="{TemplateBinding Command}">
-                                    <ContentPresenter HorizontalAlignment="Center" Content="{TemplateBinding CommandText, Mode=TwoWay}" />
-                                </Button>
-                            </Grid>
-
-                            <StackPanel Classes="both" Orientation="Horizontal" Spacing="5" Grid.Row="5" Margin="2,0,2,5" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                                <Button Classes="base Flat" MinWidth="75" Height="40" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" IsCancel="True"  IsVisible="{TemplateBinding IsCancelEnabled}" Content="CANCEL" Command="{Binding CancelCommand, Mode=TwoWay}" />
-                                <Button Classes="base Flat" MinWidth="75" Height="40" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" IsDefault="True"  Content="{TemplateBinding CommandText, Mode=TwoWay}" Command="{TemplateBinding Command}" />
-                            </StackPanel>
+                        <Grid Classes="single" Grid.Row="5" VerticalAlignment="Bottom">
+                            <Button HorizontalAlignment="Stretch" Height="40" Classes="base Flat" VerticalContentAlignment="Bottom" IsDefault="True" Command="{TemplateBinding Command}">
+                                <ContentPresenter HorizontalAlignment="Center" Content="{TemplateBinding CommandText, Mode=TwoWay}" />
+                            </Button>
                         </Grid>
-                    </styles:SnackbarHost>
+
+                        <StackPanel Classes="both" Orientation="Horizontal" Spacing="5" Grid.Row="5" Margin="2,0,2,5" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                            <Button Classes="base Flat" MinWidth="75" Height="40" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" IsCancel="True"  IsVisible="{TemplateBinding IsCancelEnabled}" Content="CANCEL" Command="{Binding CancelCommand, Mode=TwoWay}" />
+                            <Button Classes="base Flat" MinWidth="75" Height="40" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" IsDefault="True"  Content="{TemplateBinding CommandText, Mode=TwoWay}" Command="{TemplateBinding Command}" />
+                        </StackPanel>
+                    </Grid>
                 </Border>
             </ControlTemplate>
         </Setter>
