@@ -26,6 +26,8 @@
     <GeometryDrawing x:Key="Material.FolderMove" Brush="#FF000000" Geometry="M9.6,11.2 L9.6,8.8 L6.4,8.8 L6.4,5.6 L9.6,5.6 L9.6,3.2 L13.6,7.2  M14.4,1.6 L8,1.6 L6.4,0 L1.6,0 C0.712,0 0,0.712 0,1.6 L0,11.2 A1.6,1.6 0 0 0 1.6,12.8 L14.4,12.8 A1.6,1.6 0 0 0 16,11.2 L16,3.2 C16,2.312 15.28,1.6 14.4,1.6 z" />
     <GeometryDrawing x:Key="BoxIcons.RegularRename" Brush="#FF000000" Geometry="M14.4,3.196 L13.6,3.196 L13.6,4.796 L14.4,4.796 L14.4,11.2 L13.6,11.2 L13.6,12.8 L14.4,12.8 C15.28,12.8 16,12.08 16,11.2 L16,4.796 C16,3.914 15.28,3.196 14.4,3.196 z M3.2,6.396 L10.4,6.396 L10.4,9.596 L3.2,9.596 z M12,12.8 L12,1.6 L14.4,1.6 L14.4,2.930E-007 L7.996,2.930E-007 L7.996,1.6 L10.4,1.6 L10.4,3.196 L1.6,3.196 C0.7176,3.196 6.523E-008,3.914 6.523E-008,4.796 L6.523E-008,11.2 C6.523E-008,12.08 0.7176,12.8 1.6,12.8 L10.4,12.8 L10.4,14.4 L7.996,14.4 L7.996,16 L14.4,16 L14.4,14.4 L12,14.4 L12,12.8 z M1.6,11.2 L1.6,4.796 L10.4,4.796 L10.4,11.2 L1.6,11.2 z" />
     <GeometryDrawing x:Key="Entypo+.MagnifyingGlass" Brush="#FF000000" Geometry="M15.64,13.54 L11.81,9.708 C12.39,8.762 12.72,7.648 12.72,6.458 C12.72,2.998 9.725,1.700E-007 6.264,1.700E-007 C2.804,-0.001013 9.658E-008,2.804 9.658E-008,6.264 C9.658E-008,9.724 2.999,12.72 6.458,12.72 C7.609,12.72 8.686,12.41 9.612,11.87 L13.46,15.72 C13.84,16.09 14.45,16.09 14.82,15.72 L15.78,14.76 C16.15,14.39 16.02,13.91 15.64,13.54 z M1.928,6.264 C1.928,3.868 3.869,1.927 6.264,1.927 C8.66,1.927 10.8,4.061 10.8,6.458 C10.8,8.853 8.853,10.8 6.458,10.8 C4.062,10.79 1.928,8.659 1.928,6.264 z" />
+    <GeometryDrawing x:Key="Cool.TrashFull" Brush="#FF000000" Geometry="M4.267,5.867 A0.5333,-0.5333 0 0 1 4.8,6.4 L4.8,12.8 A0.5333,-0.5333 0 0 1 3.733,12.8 L3.733,6.4 A0.5333,-0.5333 0 0 1 4.267,5.867 z M6.933,5.867 A0.5333,-0.5333 0 0 1 7.467,6.4 L7.467,12.8 A0.5333,-0.5333 0 0 1 6.4,12.8 L6.4,6.4 A0.5333,-0.5333 0 0 1 6.933,5.867 z M10.13,6.4 A0.5333,-0.5333 0 0 0 9.067,6.4 L9.067,12.8 A0.5333,-0.5333 0 0 0 10.13,12.8 L10.13,6.4 z M13.87,3.2 A1.067,-1.067 0 0 1 12.8,4.267 L12.27,4.267 L12.27,13.87 A2.133,-2.133 0 0 1 10.13,16 L3.733,16 A2.133,-2.133 0 0 1 1.6,13.87 L1.6,4.267 L1.067,4.267 A1.067,-1.067 0 0 1 0,3.2 L0,2.133 A1.067,-1.067 0 0 1 1.067,1.067 L4.8,1.067 A1.067,-1.067 0 0 1 5.867,0 L8,0 A1.067,-1.067 0 0 1 9.067,1.067 L12.8,1.067 A1.067,-1.067 0 0 1 13.87,2.133 L13.87,3.2 z M2.793,4.267 L2.667,4.33 L2.667,13.87 A1.067,-1.067 0 0 0 3.733,14.93 L10.13,14.93 A1.067,-1.067 0 0 0 11.2,13.87 L11.2,4.33 L11.07,4.267 L2.793,4.267 z M1.067,3.2 L1.067,2.133 L12.8,2.133 L12.8,3.2 L1.067,3.2 z" />
+    <GeometryDrawing x:Key="Bootstrap.FolderFill" Brush="#FF000000" Geometry="M15.42,1.143 L7.657,1.143 L6.686,0.1714 L6.286,0 L0.5714,0 L0,0.5714 L0,13.14 L0.5714,13.71 L15.43,13.71 L16,13.14 L16,1.714 L15.42,1.143 z M14.83,10.85 L14.83,12.57 L1.12,12.57 L1.12,5.714 L6.251,5.714 L6.651,5.543 L7.634,4.56 L14.85,4.56 L14.85,6.274 L14.83,10.85 z M14.83,3.429 L7.406,3.429 L7.006,3.6 L6.023,4.583 L1.131,4.583 L1.131,1.154 L6.034,1.154 L7.006,2.126 L7.417,2.297 L14.85,2.297 L14.83,3.429 z" />
 
     <GeometryDrawing x:Key="BoxIcons.RegularChevronLeft" Brush="#FF000000" Geometry="M8,7.700E-007 L-2.085E-007,8 L8,16 L9.982,14.02 L3.964,8 L9.982,1.982 z" />
     <GeometryDrawing x:Key="BoxIcons.RegularChevronRight" Brush="#FF000000" Geometry="M1.982,16 L9.982,8 L1.982,7.700E-007 L-2.326E-007,1.982 L6.018,8 L-2.326E-007,14.02 z" />
