@@ -2,6 +2,8 @@ Version 1.0.16
 
 - Add Bigger Preview For Templates And Notebooks
 - Add Automatic IP-Address Adjustment After Update
+- Better Icons
+- Design Fixes
 
 Version 1.0.15
 
